# snake

./: .gitignore  CMakeLists.txt  README.md  main.cpp  snake.cpp  snake.hpp
.cache/clangd/index/: main.cpp.97CB0998BF802742.idx  snake.cpp.AE0E33C5818C395A.idx  snake.hpp.4BE116FB1E6D1315.idx
src/: main.cpp  snake.cpp  snake.hpp  snake_gpt_ver.cpp
